@startuml
hide circle
skinparam classAttributeIconSize 0

class DisplayListedPropertiesView {
}

class DisplayListedPropertiesController {
  +getAll(): List<Listing>
}

class DisplayListedPropertiesService {
  + DisplayListedPropertiesService (ListingRepository catsRepo)
  +getAll(): List<Listing>
}

interface ListingRepository <<interface>> {
  +getAll(): List<Listing>
}


class Listing {
  -publishDate
  -businessType
  -commission
  -status
  Listing(date publishDate, string businessType,
 double commission,string status)
  +getPublishDate():date
  +getBusinessType(): string
  +getCommission(): double
  +getStatus(): string
  +getProperty(): Property
}

interface RepositoryFactory <<interface>>{
  +getListingsRepository(): ListingRepository
}
class Property {
    -type
    -area
    -location
    -distanceFromCityCenter
    -price
    -photos
    -availability

Property(string type, double area , string location, double distanceFromCityCenter,
double price, vector<std::string> photos,bool availability)
}
class ListingMemoryRepository {
 +getAll(): List<Listing>
}

class MemoryRepositoryFactory {
 + getListingsRepository(): ListingRepository
}

ListingMemoryRepository .up.|> ListingRepository
MemoryRepositoryFactory .up.|> RepositoryFactory

MemoryRepositoryFactory .right.> ListingMemoryRepository


ListingRepository "1" -right-> "0..*" Listing:  records
Property "1" -up- "0..*" Listing : listed as
DisplayListedPropertiesView ..> DisplayListedPropertiesController
DisplayListedPropertiesController ..> DisplayListedPropertiesService
DisplayListedPropertiesService ..> ListingRepository
RepositoryFactory .right.> ListingRepository
DisplayListedPropertiesView ..> Listing
@enduml